sign in modal spacing issues

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1881,3 +1881,27 @@ div.modal-content{
   color: #22448E;
 }
 
+#signin{
+  h3{
+    line-height: 1;
+  }
+  .modal-header{
+    padding-top: 30px;
+  }
+  .modal-body{
+    padding-bottom: 30px;
+  }
+
+  .forgot-password-link{
+    display: inline-block;
+    line-height: 1;
+  }
+  @media (max-width: 360px) {
+    .forgot-password-link{
+      display: block;
+      margin: 5px 0 0;
+    }
+  }
+
+}
+
